--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
 <title>For Samaira ❤️</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap');
@@ -72,6 +71,8 @@ h1,h2{
 
 .slideshow img{
   width:100%;
+  max-width: 100%;
+  height: auto;
   transition: 
     opacity 1.4s ease-in-out,
     transform 6s ease;
@@ -89,10 +90,12 @@ button{
   border-radius:35px;
   font-size:1.05em;
   cursor:pointer;
-
+  min-height: 44px; /* Apple recommended tap size */
   background: linear-gradient(135deg, #ffd1e3, #ffb3cc);
   color:#da8fab;
-
+  padding: clamp(12px, 3vw, 18px) clamp(20px, 6vw, 32px);
+  font-size: clamp(14px, 4vw, 18px);
+  border-radius: 999px; /* feels touch-friendly */
   box-shadow: 0 8px 20px rgba(255, 105, 150, 0.35);
   transition: transform .35s ease, box-shadow .35s ease;
 }
@@ -162,9 +165,35 @@ button:hover{
 }
 
 
-
+.container {
+  width: min(92%, 900px);
+  margin: 0 auto;
+}
 .page{display:none}
 #page1{display:block}
+h1 {
+  font-size: clamp(24px, 6vw, 36px);
+}
+
+p {
+  font-size: clamp(14px, 4vw, 18px);
+}
+
+@media (max-width: 600px) {
+  body {
+    padding: 16px;
+  }
+
+  .buttons {
+    flex-direction: column;
+    gap: 12px;
+  }
+
+  .caption {
+    line-height: 1.4;
+  }
+}
+
 </style>
 </head>
 
